[package]
name = "av_help"
version = "9.25.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itoa = "1.0"

[lib]
crate-type = ["cdylib"]

# Configuration for Windows GNU target
[target.x86_64-pc-windows-gnu]
rustflags = ["-C", "target-feature=+crt-static"]

# cargo build --target=x86_64-pc-windows-msvc --release
# cargo build --target=x86_64-pc-windows-msvc --debug
# cargo build --target=x86_64-pc-windows-gnu --release